Changed some spacing issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -378,7 +378,7 @@ ul {
 }
 
 .my-story-wrapper {
-  margin-top: 16rem;
+  margin-top: 2rem;
   width: 100%;
   display: flex;
   justify-content: center;
