--- a/sass/components/_project.scss
+++ b/sass/components/_project.scss
@@ -35,7 +35,7 @@
 }
 
 .my-story-wrapper{
-  margin-top:16rem;
+  margin-top:2rem;
   width: 100%;
   display: flex;
   justify-content: center;
